--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,6 @@ CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
